--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,6 +17,8 @@
             <%= list.name %>
           </div>
         <% end %>
+        <%= cl_image_tag("cld-sample-5",
+      width: 400, height: 300, crop: :fill) %>
       </div>
     <% end %>
   </div>
