--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -48,5 +48,6 @@
     </div>
   </div>
 </div>
+<%= link_to "Go back to the lists", lists_path %>
 
 <%= render "bookmarks/modal", list: @list, bookmark: @bookmark %>
