--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,8 @@
 <div class="position-relative">
     <h1><%= @list.name %></h1>
+    <% if @list.photo.attached? %>
+    <%# <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+    <% end %>
   </div>
   <span class="movie-tag"><%= pluralize(@list.movies.size, "movie") %></span>
 </div>
