--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <div class="position-relative">
     <h1><%= @list.name %></h1>
     <% if @list.photo.attached? %>
-    <%# <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
+    <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
   </div>
   <span class="movie-tag"><%= pluralize(@list.movies.size, "movie") %></span>
@@ -44,7 +44,9 @@
     <div class="col-12 col-sm-6">
       <div class="bg-white rounded p-3">
         <h5>Add your review</h5>
-        <%= simple_form_for [@list] do |f| %>
+        <%= simple_form_for [@list, @review] do |f| %>
+         <%= f.input :comment, placeholder: "Add your review here..." %>
+          <%= f.input :rating, as: :select, collection: (1..5), required: true, prompt: "What's your rating", input_html: { data: { controller: "star-rating" } } %>
           <%= f.submit class:"btn btn-flat" %>
         <% end %>
       </div>
